--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -35,7 +39,14 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>AutoVittoriane</title>
+    <style>
+      body {
+        /* height: 812px;
+        width: 375px;
+        overflow: hidden; */
+      }
+    </style>
+    <title>North Star</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
