--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
         overflow: hidden; */
       }
     </style>
-    <title>North Star</title>
+    <title>freshBONDS</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
